--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/poppins": "^5.2.5",
     "@tailwindcss/vite": "^4.0.15",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
