--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.2.5",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@tailwindcss/vite": "^4.0.15",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
